[package]
name = "context_ruby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
context = { path = "../../../context", features = ["git-access", "ruby"] }
magnus = { version = "0.7.1", features = ["rb-sys"] }
rb-sys = { version = "0.9.99", features = [
  "global-allocator",
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api",
  "stable-api-compiled-fallback",
] }
test_report = { path = "../../../test_report", features = ["ruby"] }
# openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "*", default-features = false, features = [
  "json",
  "native-tls-vendored",
  "native-tls-alpn",
  "stream",
  "http2",
] }
home = "=0.5.9"
