[package]
name = "context_ruby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
context = { path = "../../../context", features = ["git-access", "ruby"] }
magnus = { version = "0.7" }
test_report = { path = "../../../test_report", features = ["ruby"] }
rb-sys = { version = "=0.9.103", features = [
  "link-ruby",
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
] }
sentry = { version = "=0.36.0", features = ["debug-images"] }
sentry-log = "=0.36.0"

[dev-dependencies.magnus]
version = "0.7.1"
features = ["rb-sys", "embed"]

[build-dependencies]
rb-sys-env = { version = "0.1" }
